config/webhooks/transform-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-glbc-transform
spec:
  selector:
    app.kubernetes.io/name: kcp-glbc
  ports:
    - protocol: TCP
      port: 80
      targetPort: transform
