config/webhooks/transform-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-glbc-transform
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: host.whatever.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-glbc-transform
                port:
                  number: 80
